cmake_minimum_required(VERSION 3.16)
project(sal VERSION 1.0.0)

message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "BUILD_SHARED_LIBS: ${BUILD_SHARED_LIBS}")
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")

enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++2a")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
#SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -latomic")

FILE(GLOB SOURCES src/*.cc)
FILE(GLOB MAIN_SRC src/*.cxx)
FILE(GLOB HEADERS include/${PROJECT_NAME}/*.h*)
include_directories(include)
add_library(${PROJECT_NAME} SHARED ${SOURCES} ${MAIN_SRC})
set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
#set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER include/${PROJECT_NAME}/${PROJECT_NAME}.hxx)
target_include_directories(${PROJECT_NAME} PRIVATE include/)
target_include_directories(${PROJECT_NAME} PRIVATE src/)
install(TARGETS ${PROJECT_NAME})
  # LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/lib/
# PUBLIC_HEADER DESTINATION ${CMAKE_BINARY_DIR}/include/${PROJECT_NAME}/)
install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
configure_file(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
install(FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${CMAKE_INSTALL_PREFIX})
#target_link_libraries(${PROJECT_NAME})

FILE(GLOB DEPS deps/*)
foreach(DEP ${DEPS})
  get_filename_component(DEP_LIB ${DEP} NAME)
  add_subdirectory(${DEP})
  include_directories(${DEP}/include)
  target_link_libraries(${PROJECT_NAME} PUBLIC ${DEP_LIB})
endforeach()

#set(EXE ebs_main)
#add_executable(${EXE} main.cxx)
#add_dependencies(${EXE} ${PROJECT_NAME})
#target_link_libraries(${EXE} ${PROJECT_NAME})
#
#install(TARGETS ${EXE} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/)

FILE(GLOB PROGS *.cxx)
foreach(prog ${PROGS})
  string(REGEX REPLACE "\\.[^.]*$" "" prog_mid ${prog})
  string(REGEX REPLACE ".*/" "" prog_exe ${prog_mid})
  add_executable(${prog_exe} ${prog})
  add_dependencies(${prog_exe} ${PROJECT_NAME})
  target_link_libraries(${prog_exe} ${PROJECT_NAME})
  install(TARGETS ${prog_exe} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
endforeach()

#file(COPY resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
#file(COPY tests/resources DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
#file(COPY tests/resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tests)

FILE(GLOB TESTS tests/*.cc)
foreach(test ${TESTS})
  string(REGEX REPLACE "\\.[^.]*$" "" test_mid ${test})
  string(REGEX REPLACE ".*tests/" "" test_exe ${test_mid})
  add_executable(${test_exe} ${test})
  add_dependencies(${test_exe} ${PROJECT_NAME})
  target_link_libraries(${test_exe} ${PROJECT_NAME})
  add_test(NAME ${test_exe} COMMAND ${test_exe})
#  install(TARGETS ${test_exe} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/tests)
endforeach()
